Changes
=======

branch
------

* added another template to support paster (template_paste)
* paster is the default server mode now
* grokproject --zopectl=True ... creates a grokproject like before
* with bin/paster serve etc/debug.ini 
  you need to access the project from http://localhost:8080/@@login.html
  

0.9 (unreleased)
----------------

* Respect the verboseness requested by the user when running the final
  install.

* Fix behaviour that produced double/triple output when `buildout`
  was invoked several times.

* grokproject now uses `z3c.recipe.i18n` instead of `lovely.recipe`
  for generation of i18n-scripts.

* At the end of the bootstrap.py of the generated project we now give
  the user a hint that he can run bin/buildout.

* Explicitly run the install of the eggbasket recipe.

* Fix ftesting.zcml to not include grok package : it precludes overrides of
  anything included by grok.

0.8 (2008-07-14)
----------------

* Pinned zc.buildout and the used recipes in the generated
  versions.cfg.

* Check for download errors when getting the release info files from
  grok.zope.org.  That way we give a meaningful error message to the
  user.

* Removed dependency on zc.buildout as we already use
  bootstrap.py-like code to install it on the fly if it is not there
  yet.

* Removed code that was factored out into z3c.recipe.eggbasket and
  already gets invoked by grokproject by doing a "buildout bootstrap".

* Actually added the required eggbasket section to the generated
  buildout.cfg.  Fixes https://bugs.launchpad.net/grok/+bug/242368

* Catch download error when trying to get the big grok tarball.

* Use a hardcoded bootstrap.py instead of referring to it via an
  external or downloading the current trunk revision upon each
  grokproject run (those options are potentially dangerous).

  Also added a line at the end of bootstrap.py to install the
  eggbasket section.

* Added a testbrowser test / functional test to the template.
