@@ -19,10 +19,14 @@ empty Python package in the ``src`` directory in which you can place
 the code for your web application.  To start the Zope server, execute
 ``bin/paster serve etc/deploy.ini``.
 
-To create a project with the old ``zopectl`` layout run the ``grokproject`` 
+To create a project with the previous ``zopectl`` layout run the ``grokproject`` 
 script like:
 
-  $ grokproject --zopectl=True MammothHerd
+  $ grokproject --zopectl MammothHerd
+
+or:
+
+  $ paster create -t grok MammothHerd zopectl=True
 
 For those who know paster: ``grokproject`` is just a wrapper around a
 paster template.  So instead of running the ``grokproject`` command,
